Fixed cfg files
Fixed TechRequired for small HDD and adjusted mass of both to make them
more realistic.

--- a/PartCfgs/ScienceHardDrive/part.cfg
+++ b/PartCfgs/ScienceHardDrive/part.cfg
@@ -9,7 +9,7 @@ rescaleFactor = 1
 
 node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
-TechRequired = science_module
+TechRequired = scienceTech
 entryCost = 2200
 cost = 900
 category = Science
@@ -20,7 +20,7 @@ description = A small hard drive, great for storing science data but unfortunate
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
-mass = 0.005
+mass = 0.1
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
