--- a/PartCfgs/SpaceTelescope/part.cfg
+++ b/PartCfgs/SpaceTelescope/part.cfg
@@ -8,6 +8,7 @@ mesh = model.mu
 rescaleFactor = 1
 
 node_attach = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
+node_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 
 TechRequired = advScienceTech
 entryCost = 2200
@@ -18,7 +19,7 @@ title = Space Telescope
 manufacturer = Tarsier Space Technology
 description = The pinacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
 
-attachRules = 0,1,0,0,1
+attachRules = 1,1,0,0,1
 
 // --- standard part parameters ---
 mass = 1.5
