--- a/PartCfgs/SpaceTelescope/part.cfg
+++ b/PartCfgs/SpaceTelescope/part.cfg
@@ -8,7 +8,7 @@ mesh = model.mu
 rescaleFactor = 1
 
 node_attach = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
-node_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
+node_stack_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 
 TechRequired = advScienceTech
 entryCost = 2200
