Updated part.cfg for v2.3

--- a/PartCfgs/SpaceTelescope/part.cfg
+++ b/PartCfgs/SpaceTelescope/part.cfg
@@ -17,12 +17,12 @@ category = Science
 subcategory = 0
 title = Space Telescope
 manufacturer = Tarsier Space Technology
-description = The pinacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
+description = The pinnacle of Kerbal technology, capable of peering into the deepest parts of the Kerbol system. Instructions not included.
 
 attachRules = 1,1,0,0,1
 
 // --- standard part parameters ---
-mass = 1.5
+mass = 0.25
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -35,6 +35,4 @@ MODULE
 	name = SpaceTelescope
 	maxZoom = 5
 	xmitDataScalar = 0.5
-}
-
 }
