--- a/PartCfgs/SpaceTelescope/part.cfg
+++ b/PartCfgs/SpaceTelescope/part.cfg
@@ -35,4 +35,7 @@ MODULE
 	name = SpaceTelescope
 	maxZoom = 5
 	xmitDataScalar = 0.5
+	baseTransformName = Telescope
+	cameraTransformName = CameraTransform
+	lookTransformName = LookTransform
 }
