--- a/PartCfgs/ScienceHardDrive/part.cfg
+++ b/PartCfgs/ScienceHardDrive/part.cfg
@@ -1,26 +1,28 @@
 PART
 {
-name = scienceHardDrive
+name = tarsierSpaceTelescope
 module = Part
 author = TarsierTech
 
 mesh = model.mu
 rescaleFactor = 1
 
-node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
+node_attach = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
+node_stack_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 
-TechRequired = scienceTech
+TechRequired = electronics
 entryCost = 2200
 cost = 900
 category = Science
 subcategory = 0
-title = Science Hard Drive (Small)
+title = Space Telescope
 manufacturer = Tarsier Space Technology
-description = A small hard drive, great for storing science data but unfortunately prone to data corruption.
-attachRules = 0,1,0,0,1
+description =  Rated "6/10: Adequate" by Kerbal Space Science Magazine, this telescope is useful for taking pictures of nearby moons and planets
+
+attachRules = 1,1,0,0,1
 
 // --- standard part parameters ---
-mass = 0.1
+mass = 0.25
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -30,9 +32,7 @@ maxTemp = 3200
 
 MODULE
 {
-	name = ScienceHardDrive
-	Capacity = 20
-	corruption = 0.3
-	powerUsage = 0.5
-}
+	name = SpaceTelescope
+	maxZoom = 3
+	xmitDataScalar = 0.5
 }
