--- a/GameData/Parts/ScienceHardDrive/part.cfg
+++ b/GameData/Parts/ScienceHardDrive/part.cfg
@@ -30,7 +30,7 @@ maxTemp = 3200
 
 MODULE
 {
-	name = ScienceHardDrive
+	name = TSTScienceHardDrive
 	Capacity = 20
 	corruption = 0.3
 	powerUsage = 0.5
