--- a/GameData/Parts/ScienceHardDriveLarge/part.cfg
+++ b/GameData/Parts/ScienceHardDriveLarge/part.cfg
@@ -34,7 +34,7 @@ maxTemp = 3200
 
 MODULE
 {
-	name = ScienceHardDrive
+	name = TSTScienceHardDrive
 	Capacity = 80
 	corruption = 0.1
 	powerUsage = 1.0
