--- a/GameData/Parts/SpaceTelescope/part.cfg
+++ b/GameData/Parts/SpaceTelescope/part.cfg
@@ -32,7 +32,7 @@ maxTemp = 3200
 
 MODULE
 {
-	name = SpaceTelescope
+	name = TSTSpaceTelescope
 	maxZoom = 5
 	xmitDataScalar = 0.5
 	baseTransformName = Telescope
