--- a/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
@@ -51,8 +51,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
-    <Compile Include="TarsierSpaceLab.cs" />
-    <Compile Include="TarsierSpaceLabExperiment.cs" />
+    <None Include="TarsierSpaceLab.cs" />
+    <None Include="TarsierSpaceLabExperiment.cs" />
     <Compile Include="TarsierSpaceTechnology\TSTScienceParam.cs" />
     <Compile Include="TarsierSpaceTechnology\TSTChemCamContract.cs" />
     <Compile Include="TarsierSpaceTechnology\TSTTelescopeContract.cs" />
