--- a/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTechnology/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTechnology/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
@@ -21,7 +21,7 @@ description =  The ChemCam fires high powered lasers at rocks and works out what
 attachRules = 1,1,0,0,1
 
 // --- standard part parameters ---
-mass = 0.25
+mass = 0.05
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -36,5 +36,12 @@ MODULE
 	experimentID = TarsierSpaceTech.ChemCam
 	
 	xmitDataScalar = 0.5
+}
+
+MODULE
+{
+	name = FlagDecal
+	
+    textureQuadName = flag
 }
 }
