--- a/GameData/TarsierSpaceTech/Galaxies/galaxies.cfg
+++ b/GameData/TarsierSpaceTech/Galaxies/galaxies.cfg
@@ -1,55 +1,63 @@
 GALAXY
 {
-	name = Twin Clouds
+	name = Galaxy1
+	theName = Twin Clouds
 	textureURL = TarsierSpaceTech/Galaxies/galaxy1
 	location = 0.85696, -0.77464, -0.22952
 	size = 10
 }
 GALAXY
 {
-	name = Big Plate Galaxy
+	name = Galaxy2
+	theName = Big Plate Galaxy
 	textureURL = TarsierSpaceTech/Galaxies/galaxy2
 	location = -0.50454, -0.13956, -0.99025
 	size = 12
 }
 GALAXY
 {
-	name = The Roundabout
+	name = Galaxy3
+	theName = The Roundabout
 	textureURL = TarsierSpaceTech/Galaxies/galaxy3
 	location = 0.67248, 0.031668, -0.644117
 	size = 15
 }
 GALAXY
 {
-	name = The Purple Donkey Nebula
+	name = Galaxy4
+	theName = The Purple Donkey Nebula
 	textureURL = TarsierSpaceTech/Galaxies/galaxy4
 	location = -0.15908, -0.86295, 0.37152
 	size = 18
 }
 GALAXY
 {
-	name = The Big Pop
+	name = Galaxy5
+	theName = The Big Pop
 	textureURL = TarsierSpaceTech/Galaxies/galaxy5
 	location = -0.4057026, -0.55695, 0.123896
 	size = 2
 }
 GALAXY
 {
-	name = Vacuum Cleaner Galaxy
+	name = Galaxy6
+	theName = Vacuum Cleaner Galaxy
 	textureURL = TarsierSpaceTech/Galaxies/galaxy6
 	location = 0.767182995, 0.742178, -0.310394
 	size = 6.5
 }
 GALAXY
 {
-	name = The Fingerprint Galaxy
+	name = Galaxy7
+	theName = The Fingerprint Galaxy
 	textureURL = TarsierSpaceTech/Galaxies/galaxy7
 	location = 0.125135, 0.372324, -0.08718506
 	size = 17
 }
 GALAXY
 {
-	name = Strawberries and Cream Cloud
+	name = Galaxy8
+	theName = Strawberries and Cream Cloud
 	textureURL = TarsierSpaceTech/Galaxies/galaxy8
 	location = 0.848314, -0.4493518, 0.4242199
 	size = 4
