--- a/GameData/TarsierSpaceTech/Galaxies/galaxies.cfg
+++ b/GameData/TarsierSpaceTech/Galaxies/galaxies.cfg
@@ -41,7 +41,7 @@ GALAXY
 GALAXY
 {
 	name = Galaxy6
-	theName = Vacuum Cleaner Galaxy
+	theName = The Great Plug Hole
 	textureURL = TarsierSpaceTech/Galaxies/galaxy6
 	location = 0.767182995, 0.742178, -0.310394
 	size = 6.5
