Upgrade for KSP V1.0.0
Compat. with KSP V1.0.0
Rebalanced all parts costs and to new Tech Tree.
nerfed Small telescope range.
Fixes for contract spamming and you now need the Large telescope Tech
for the Galaxy contracts.

--- a/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
@@ -10,8 +10,8 @@ rescaleFactor = 1
 node_attach = 0.0, 0, 0, 0.0, 0.0, -1.0
 
 TechRequired = fieldScience
-entryCost = 2200
-cost = 900
+entryCost = 7000
+cost = 7000
 category = Science
 subcategory = 0
 title = ChemCam
@@ -27,7 +27,9 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 3200
+maxTemp = 2000 // = 3200
+PhysicsSignificance = 0
+bulkheadProfiles = srf
 
 MODULE
 {
