--- a/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
@@ -9,7 +9,7 @@ rescaleFactor = 1
 
 node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
-TechRequired = scienceTech
+TechRequired = precisionEngineering
 entryCost = 2200
 cost = 900
 category = Science
@@ -26,7 +26,9 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 3200
+maxTemp = 2000 // = 3200
+PhysicsSignificance = 0
+bulkheadProfiles = srf
 
 MODULE
 {
