--- a/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
@@ -14,8 +14,8 @@ node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
 TechRequired = electronics
-entryCost = 2200
-cost = 900
+entryCost = 5000
+cost = 1800
 category = Science
 subcategory = 0
 title = Science Hard Drive (Large)
@@ -30,7 +30,9 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 3200
+maxTemp = 2000 // = 3200
+PhysicsSignificance = 0
+bulkheadProfiles = srf
 
 MODULE
 {
