--- a/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
@@ -10,9 +10,9 @@ rescaleFactor = 1
 node_attach = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 node_stack_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 
-TechRequired = advScienceTech
-entryCost = 2200
-cost = 900
+TechRequired = scienceTech
+entryCost = 10000
+cost = 5000
 category = Science
 subcategory = 0
 title = Space Telescope
@@ -28,12 +28,14 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 3200
+maxTemp = 2000 // = 3200
+PhysicsSignificance = 0
+bulkheadProfiles = srf
 
 MODULE
 {
 	name = TSTSpaceTelescope
-	maxZoom = 5
+	maxZoom = 4
 	xmitDataScalar = 0.5
 	baseTransformName = Telescope
 	cameraTransformName = CameraTransform
