--- a/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -11,8 +11,8 @@ node_attach = 0.0, 0, 0, 0.0, -1.0, 0.0
 node_stack_bottom01 = 0.0, 0, 0, 0.0, -1.0, 0.0
 
 TechRequired = advScienceTech
-entryCost = 2200
-cost = 900
+entryCost = 20000
+cost = 10000
 category = Science
 subcategory = 0
 title = Deep Space Telescope
@@ -28,7 +28,9 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 3200
+maxTemp = 2000 // = 3200
+PhysicsSignificance = 0
+bulkheadProfiles = srf
 
 MODULE
 {
