--- a/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -28,7 +28,7 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 2000 // = 3200
+maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
 
@@ -37,6 +37,7 @@ MODULE
 	name = TSTSpaceTelescope
 	maxZoom = 6
 	xmitDataScalar = 0.5
+	labBoostScalar = 1.2
 }
 
 MODULE
