--- a/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
@@ -27,23 +27,21 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 2000 // = 3200
+maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
 
 MODULE
 {
-	name = TSTChemCam
-	
-	experimentID = TarsierSpaceTech.ChemCam
-	
+	name = TSTChemCam	
+	experimentID = TarsierSpaceTech.ChemCam	
 	xmitDataScalar = 0.5
+	labBoostScalar = 1.2
 }
 
 MODULE
 {
-	name = FlagDecal
-	
+	name = FlagDecal	
     textureQuadName = flag
 }
 }
