--- a/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
+++ b/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
@@ -23,7 +23,15 @@ EXPERIMENT_DEFINITION
 		LookingAtDres=Doesn't look like anything exciting is going on there.
 		LookingAtJool=That's going to make a lovely postcard.
 		LookingAtLaythe=That planet reminds you of home.
-		LookingAtEeloo=This was a long way to come just for a picture.
+		LookingAtEeloo=This was a long way to come just for a picture.	
+		LookingAtGalaxy1=Two fluffy clouds.
+		LookingAtGalaxy2=It's like a big plate or is it a dish?	
+		LookingAtGalaxy3=It goes around and around.	
+		LookingAtGalaxy4=Is it a horse? Eee Awww, No I think it's a Donkey.
+		LookingAtGalaxy5=That's a big explosion!
+		LookingAtGalaxy6=It kinda just looks like a giant plug hole.
+		LookingAtGalaxy7=Is this a sign of alien life? Looks like my fingerprint.
+		LookingAtGalaxy8=Mmmm Strawberries and Cream.		
 	}
 }
 
