--- a/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
@@ -26,15 +26,17 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 2000 // = 3200
+maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
 
 MODULE
 {
 	name = TSTScienceHardDrive
-	Capacity = 20
+	Capacity = 120
 	corruption = 0.3
 	powerUsage = 0.5
+	fillFromEVA = true
+	EVARange = 1.2
 }
 }
