--- a/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
@@ -30,15 +30,17 @@ maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 1
 crashTolerance = 8
-maxTemp = 2000 // = 3200
+maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
 
 MODULE
 {
 	name = TSTScienceHardDrive
-	Capacity = 80
+	Capacity = 480
 	corruption = 0.1
 	powerUsage = 1.0
+	fillFromEVA = true
+	EVARange = 1.2
 }
 }
