--- a/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
@@ -16,7 +16,7 @@ category = Science
 subcategory = 0
 title = Science Hard Drive (Small)
 manufacturer = Tarsier Space Technology
-description = A small hard drive, great for storing science data but unfortunately prone to data corruption.
+description = A small hard drive, great for storing science data but unfortunately prone to data corruption. Can be attached and removed in EVA using KIS/KAS.
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
