--- a/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
@@ -39,6 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
+    <Reference Include="DistantObject">
+      <HintPath>.\DistantObject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -71,8 +74,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ToolBarManager.cs" />
+    <Compile Include="TSTDOE.cs" />
+    <Compile Include="TSTMenu.cs" />
     <Compile Include="TSTScienceParam.cs" />
     <Compile Include="TSTChemCamContract.cs" />
+    <Compile Include="TSTSettings.cs" />
     <Compile Include="TSTTelescopeContract.cs" />
     <Compile Include="TSTTelescopeContractParam.cs" />
     <Compile Include="TSTProgressTracker.cs" />
@@ -99,6 +106,11 @@
 
 xcopy "$(TargetPath)" "$(SolutionDir)..\GameData\$(ProjectName)\" /Y
 
+xcopy "$(ProjectDir)$(OutDir)TarsierSpaceTech.pdb" "$(SolutionDir)..\GameData\$(ProjectName)\" /Y
+
+"C:\Program Files (x86)\Unity\Editor\Data\MonoBleedingEdge\cli.bat"  "C:\Program Files (x86)\Unity\Editor\Data\MonoBleedingEdge\lib\mono\4.0\pdb2mdb.exe" $(TargetFileName)
+xcopy "$(ProjectDir)$(OutDir)$(TargetFileName).mdb" "$(SolutionDir)..\GameData\$(ProjectName)\" /Y
+
 where /q 7za
 if %25ERRORLEVEL%25 == 1 (
    echo Cannot find 7-zip to package build
@@ -110,7 +122,7 @@ if exist "$(SolutionDir)..\$(ProjectName).zip" del "$(SolutionDir)..\$(ProjectNa
 c:\7za\7za a -tzip "$(SolutionDir)..\$(ProjectName).zip" "$(SolutionDir)..\GameData" "$(SolutionDir)..\LICENSE"
 )
 
-c:\7za\7za d -r "$(SolutionDir)..\$(ProjectName).zip" "*.ddsified"
+c:\7za\7za d -r "$(SolutionDir)..\$(ProjectName).zip" "*.ddsified" "*.pdb" "*.mdb"
 xcopy /E /Y "$(SolutionDir)..\GameData" "%25KSP_DIR%25\GameData"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
