--- a/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
@@ -42,6 +42,9 @@
     <Reference Include="DistantObject">
       <HintPath>.\DistantObject.dll</HintPath>
     </Reference>
+    <Reference Include="RemoteTech">
+      <HintPath>.\RemoteTech.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
