--- a/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -45,4 +45,20 @@ MODULE
     name = FlagDecal
     textureQuadName = flag
 }
+
+MODULE
+{
+	name =  TSTGyroReactionWheel
+	PitchTorque = 5
+	YawTorque = 5
+	RollTorque = 5
+	powerscale = 0.1f
+	sensitivity = 0.002f
+	
+	RESOURCE
+	{
+		name = ElectricCharge
+		rate = 1
+	}
+}
 }
