--- a/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
+++ b/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
@@ -42,3 +42,19 @@ MODULE
 	cameraTransformName = CameraTransform	
 	lookTransformName = LookTransform
 }
+MODULE
+{
+	name =  TSTGyroReactionWheel
+	PitchTorque = 5
+	YawTorque = 5
+	RollTorque = 5
+	powerscale = 0.2f
+	sensitivity = 0.05f
+	
+	RESOURCE
+	{
+		name = ElectricCharge
+		rate = 1
+	}
+}
+}
