--- a/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
+++ b/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
@@ -67,7 +67,7 @@ EXPERIMENT_DEFINITION
 
 		MunSrfLanded = The composition is surprisingly similar to Kerbin's.
 		MunSrfLanded = The spectrum is very close to that of Basalt.
-		MunSrfLanded = The spectrum appears quite messy, this appears to be a mixture of many different rock types
+		MunSrfLanded = The spectrum appears quite messy, this appears to be a mixture of many different rock types.
 		MunSrfLanded = The rocks here are rich in precious metals.
 		
 		MinmusSrfLanded = The composition is almost identical to a mint dessert.
