--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -52,8 +52,8 @@ MODULE
 	PitchTorque = 5
 	YawTorque = 5
 	RollTorque = 5
-	powerscale = 0.1f
-	sensitivity = 0.002f
+	powerscale = 0.1
+	sensitivity = 0.002
 	
 	RESOURCE
 	{
