--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/Config.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/Config.cfg
@@ -1,9 +1,11 @@
 TSTSettings
 {
-	FwindowPosX = 68
-	FwindowPosY = 217
-	CwindowPosX = 512
-	CwindowPosY = 134
+	FwindowPosX = 40
+	FwindowPosY = 440
+	SCwindowPosX = 40
+	SCwindowPosY = 440
+	CwindowPosX = 510
+	CwindowPosY = 104
 	GalwindowPosX = 512
 	GalwindowPosY = 128
 	BodwindowPosX = 1186
@@ -12,8 +14,9 @@ TSTSettings
 	ChemwinLge = 600
 	TelewinSml = 300
 	TelewinLge = 600
-	UseAppLauncher = True
+	UseAppLauncher = False
 	debugging = False
+	Tooltips = True
 	maxChemCamContracts = 3
 	photoOnlyChemCamContracts = True
 }
