--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
@@ -48,8 +48,8 @@ MODULE
 	PitchTorque = 5
 	YawTorque = 5
 	RollTorque = 5
-	powerscale = 0.2f
-	sensitivity = 0.05f
+	powerscale = 0.2
+	sensitivity = 0.05
 	
 	RESOURCE
 	{
