--- a/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/TarsierSpaceTech.csproj
@@ -54,7 +54,66 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\REPOSoftTechKSPUtils\RSTutilities.cs">
+      <Link>RSTutilities.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Agencies\Agents.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Agencies\TarsierSpaceTechnology.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Agencies\TarsierSpaceTechnology.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Agencies\TarsierSpaceTechnology_scaled.truecolor" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Flags\Tarsier Space Technology.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Flags\Tarsier Space Technology.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxies.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy1.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy1.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy2.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy2.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy3.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy3.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy4.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy4.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy5.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy5.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy6.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy6.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy7.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy7.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy8.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Galaxies\galaxy8.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\LICENSE" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\AdvSpaceTelescope\model.mu" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\AdvSpaceTelescope\part.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\AdvSpaceTelescope\texture001.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\AdvSpaceTelescope\texture001.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ChemCam\model.mu" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ChemCam\part.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ChemCam\texture.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ChemCam\texture.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDriveLarge\model.mu" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDriveLarge\model010.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDriveLarge\model010.mbm.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDriveLarge\model011.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDriveLarge\model011.mbm.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDriveLarge\part.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDrive\model.mu" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDrive\model000.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDrive\model000.mbm.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDrive\model001.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDrive\model001.mbm.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\ScienceHardDrive\part.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\SpaceTelescope\model.mu" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\SpaceTelescope\part.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\SpaceTelescope\texture.dds" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Parts\SpaceTelescope\texture.png.ddsified" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Plugins\Config.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Resources\MMOPMScienceDefs.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Resources\MMRSSScienceDefs.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\Resources\ScienceDefs.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\TarsierSpaceTechnology.version" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\TSTAddKIS.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\TSTMMResearchBodies.cfg" />
+    <None Include="Distribution\GameData\TarsierSpaceTech\TSTResearchBodies.cfg" />
     <None Include="TARGETS\target-01.bin" />
     <None Include="TARGETS\target-02.bin" />
     <None Include="TARGETS\target-03.bin" />
@@ -74,10 +133,10 @@
     </Compile>
     <Compile Include="RBWrapper.cs" />
     <Compile Include="RTWrapper.cs" />
+    <Compile Include="Textures.cs" />
     <Compile Include="ToolBarManager.cs" />
     <Compile Include="TSTDOE.cs" />
     <Compile Include="TSTGyroReactionWheel.cs" />
-    <Compile Include="TSTInstalledMods.cs" />
     <Compile Include="TSTMenu.cs" />
     <Compile Include="TSTScienceParam.cs" />
     <Compile Include="TSTChemCamContract.cs" />
@@ -91,10 +150,6 @@
     <Compile Include="TSTGalaxy.cs" />
     <Compile Include="TSTScienceHardDrive.cs" />
     <Compile Include="TSTSpaceTelescope.cs" />
-    <Compile Include="Utils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ksp_dir.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -104,30 +159,53 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Changelog.txt" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Icons\ToolbarIcon.png" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Icons\TSTbtnRedCross.png" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Icons\TSTbtnResize.png" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Icons\TSTIconOff.png" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Icons\TSTIconOn.png" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Icons\TSTToolTipBox.png" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\MiniAVC Licence.txt" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\MiniAVC.dll" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Plugins\TarsierSpaceTech.dll" />
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Plugins\TarsierSpaceTech.dll.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Distribution\GameData\TarsierSpaceTech\Plugins\TarsierSpaceTech.pdb" />
+    <Content Include="LocalDev\7za_dir.txt" />
+    <Content Include="LocalDev\ksp_dir.txt" />
+    <Content Include="LocalDev\mono_exe.txt" />
+    <Content Include="LocalDev\pdb2mdb_exe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>set /p KSP_DIR=&lt;"$(ProjectDir)ksp_dir.txt"
+    <PostBuildEvent>set /p KSP_DIR=&lt;"$(ProjectDir)LocalDev\ksp_dir.txt"
 
-xcopy "$(TargetPath)" "$(SolutionDir)..\GameData\$(ProjectName)\" /Y
+set /p MONO_EXE_DIR=&lt;"$(ProjectDir)LocalDev\mono_exe.txt"
 
-xcopy "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)..\GameData\$(ProjectName)\" /Y
+set /p PDB2MDB_EXE_DIR=&lt;"$(ProjectDir)LocalDev\pdb2mdb_exe.txt"
+
+set /p ZA_DIR=&lt;"$(ProjectDir)LocalDev\7za_dir.txt"
+
+xcopy "$(TargetPath)" "$(SolutionDir)$(ProjectName)\Distribution\GameData\$(ProjectName)\Plugins\" /Y
+
+xcopy "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)$(ProjectName)\Distribution\GameData\$(ProjectName)\Plugins\" /Y
 
 cd "$(TargetDir)"
-"C:\Program Files (x86)\mono\bin\mono.exe" "C:\Program Files (x86)\mono\lib\mono\4.5\pdb2mdb.exe" "$(TargetFileName)"
-xcopy "$(TargetDir)$(ProjectName).dll.mdb" "$(SolutionDir)..\GameData\$(ProjectName)\" /Y
+"%25MONO_EXE_DIR%25" "%25PDB2MDB_EXE_DIR%25" "$(TargetFileName)"
+xcopy "$(TargetDir)$(ProjectName).dll.mdb" "$(SolutionDir)$(ProjectName)\Distribution\GameData\$(ProjectName)\Plugins\" /Y
 
-where /q "C:\7za\:7za.exe"
+where /q %25ZA_DIR%25:7za.exe
 if %25ERRORLEVEL%25 == 1 (
    echo Cannot find 7-zip to package build
 ) else (
    echo Packaging build
   ) 
-if exist "$(SolutionDir)..\$(ProjectName).zip" del "$(SolutionDir)..\$(ProjectName).zip"
+if exist "$(SolutionDir)$(ProjectName).zip" del "$(SolutionDir)$(ProjectName).zip"
    
-c:\7za\7za a -tzip -r  "$(SolutionDir)..\$(ProjectName).zip" "$(SolutionDir)..\GameData"
-c:\7za\7za d -r  -x!REPOSoftTech.png -x!ToolbarIcon.png -x!TSTIconOff.png -x!TSTIconOn.png "$(SolutionDir)..\$(ProjectName).zip" "*.ddsified" "*.pdb" "*.mdb" "*.png"
-xcopy /E /Y "$(SolutionDir)..\GameData" "%25KSP_DIR%25\GameData"
+%25ZA_DIR%257za.exe a -tzip -r  "$(SolutionDir)$(ProjectName).zip" "$(SolutionDir)$(ProjectName)\Distribution\GameData"
+c:\7za\7za d -r  -x!REPOSoftTech.png -x!ToolbarIcon.png -x!TSTbtnResize.png -x!TSTbtnRedCross.png -x!TSTToolTipBox.png -x!TSTIconOff.png -x!TSTIconOn.png "$(SolutionDir)$(ProjectName).zip" "*.ddsified" "*.pdb" "*.mdb" "*.png"
+xcopy /E /Y "$(SolutionDir)$(ProjectName)\Distribution\GameData" "%25KSP_DIR%25\GameData"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
