V 6.0 KSP 1.1 Turbo Charged Edition
See changelog. Working in full release KSP 1.1

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/AdvSpaceTelescope/part.cfg
@@ -31,6 +31,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
+tags = tarsier tst advanced telescope science
 
 MODULE
 {
