--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
@@ -30,6 +30,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
+tags = tarsier tst advanced science chemcam rovercam camera
 
 MODULE
 {
