--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/Config.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/Config.cfg
@@ -14,7 +14,7 @@ TSTSettings
 	ChemwinLge = 600
 	TelewinSml = 300
 	TelewinLge = 600
-	UseAppLauncher = False
+	UseAppLauncher = True
 	debugging = False
 	Tooltips = True
 	maxChemCamContracts = 3
