--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
@@ -29,6 +29,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
+tags = tarsier tst advanced science sdd harddrive disk storage
 
 MODULE
 {
