--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/SpaceTelescope/part.cfg
@@ -31,6 +31,7 @@ crashTolerance = 8
 maxTemp = 1200 // = 2900
 PhysicsSignificance = 0
 bulkheadProfiles = srf
+tags = tarsier tst advanced telescope science
 
 MODULE
 {
