--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMOPMScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMOPMScienceDefs.cfg
@@ -1,6 +1,6 @@
 @EXPERIMENT_DEFINITION[*]:HAS[#id[TarsierSpaceTech.SpaceTelescope]:NEEDS[OPM]]
 {
-	%RESULTS
+	@RESULTS
 	{		
 		LookingAtSarnus=A gas giant. The rings around it are beautiful.
 		LookingAtHale=This tiny moon is so hard to see through Sarnus' rings, but it must be responsible for keeping the rings in place.
@@ -21,7 +21,7 @@
 
 @EXPERIMENT_DEFINITION[*]:HAS[#id[TarsierSpaceTech.ChemCam]:NEEDS[OPM]]
 {
-	%RESULTS
+	@RESULTS
 	{		
 		HaleSrfLanded=There is nothing but rock, and amazing that we can keep the ChemCam on the ground to do any analysis of it's composition.
 		OvokSrfLanded=Laser analysis of the surface of Ovok reveals ice. Maybe it's not a space kraken egg after all.
@@ -34,4 +34,5 @@
 		ThatmoSrfLanded=Blasts from the laser vaporize the ice. Lots of ice.
 		NisseeSrfLanded=The laser has a hard time calibrating out here. But it appears to be rock, and marble?
 		PlockSrfLanded=How did we manage to get here. Analysis indicates ice.
+	}
 }
