--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMRSSScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/MMRSSScienceDefs.cfg
@@ -1,6 +1,6 @@
 @EXPERIMENT_DEFINITION[*]:HAS[#id[TarsierSpaceTech.SpaceTelescope]:NEEDS[RealSolarSystem]]
 {
-	%RESULTS
+	@RESULTS
 	{		
 		LookingAtMercury=Mercury's surface is covered with craters of various ages; the ejecta from some newer craters is clearly visible through the telescope.
 		LookingAtVenus=Faint changes in the cloud cover suggest the presence of some high altitude mountains or volcanoes in this area.
@@ -22,7 +22,7 @@
 
 @EXPERIMENT_DEFINITION[*]:HAS[#id[TarsierSpaceTech.ChemCam]:NEEDS[RealSolarSystem]]
 {
-	%RESULTS
+	@RESULTS
 	{		
 		MercurySrfLanded=Scans of vaporized surface materials indicate that Mercury is nearly entirely covered with layers of igneous rock.
 		VenusSrfLanded=Laser analysis of the surface of Venus reveals an elemental composition similar to that of most rocky planets; primarily silicate in nature.
