--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
@@ -13,6 +13,7 @@ EXPERIMENT_DEFINITION
 	RESULTS
 	{
 		default=Took a great scientific picture of a distant body.
+		default=Ok who's the wise guy who put bubble gum on the camera lens?
 		LookingAtSun=That burning smell is your corneas.
 		LookingAtKerbin=Is that my house there? Or is there some dirt on the lens.
 		LookingAtMun=Just what we need, another picture of the Mun.
