--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/PluginData/Config.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Plugins/PluginData/Config.cfg
@@ -19,6 +19,7 @@ TSTSettings
 	Tooltips = True
 	maxChemCamContracts = 3
 	photoOnlyChemCamContracts = True
+	ZoomSkyBox = True
 }
 TSTStockPlanetOrder
 {
