--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTMMResearchBodies.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTMMResearchBodies.cfg
@@ -27,3 +27,19 @@
 		scienceReward = 8
 	}
 }
+
+@PART[tarsierSpaceTelescope]:FOR[TarsierSpaceTech]:NEEDS[ResearchBodies,Kopernicus]
+{
+	@MODULE[ModuleTrackBodies]
+	{
+		@maxTrackDistance = 540000000000							
+	}
+}
+
+@PART[tarsierAdvSpaceTelescope]:FOR[TarsierSpaceTech]:NEEDS[ResearchBodies,Kopernicus]
+{
+	@MODULE[ModuleTrackBodies]
+	{
+		@maxTrackDistance = 324000000000
+	}
+}
