--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
@@ -4,26 +4,26 @@ RESEARCHBODIES
 	name = TarsierSpaceTech	
 	ONDISCOVERY
 	{		
-		Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
-		Galaxy3 = We found a new galaxy that goes around and around!
-		Galaxy4 = We found a new galaxy that looks like a horse.
-		Galaxy5 = We found a new galaxy that looks like it just popped!
-		Galaxy6 = We found a new galaxy that looks like a giant plughole.
-		Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
-		Galaxy8 = We found a new galaxy that looks like, well, a dessert.
+		Twin Clouds = We found a new galaxy that looks like two fluffy clouds.
+		Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		The Roundabout = We found a new galaxy that goes around and around!
+		The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		The Big Pop = We found a new galaxy that looks like it just popped!
+		The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
 	}
 	
 	IGNORELEVELS
 	{
 		// body = easy normal medium hard		
-		Galaxy1 = true false false false
-		Galaxy2 = true false false false
-		Galaxy3 = true false false false
-		Galaxy4 = true false false false
-		Galaxy5 = true false false false
-		Galaxy6 = true false false false
-		Galaxy7 = true false false false
-		Galaxy8 = true false false false
+		Twin Clouds = true false false false
+		Big Plate Galaxy = true false false false
+		The Roundabout = true false false false
+		The Purple Donkey Nebula = true false false false
+		The Big Pop = true false false false
+		The Great Plug Hole = true false false false
+		The Fingerprint Galaxy = true false false false
+		Strawberries and Cream Cloud = true false false false
 	}
 }
